src/main/metadata/objects/Current_Due__c.object
<CustomObject>
    <description>This is created as part  of FS Development</description>
    <fields>
        <fullName>FS_Contract__c</fullName>
        <label>FS Contract</label>
        <referenceTo>FS_Contract__c</referenceTo>
        <relationshipLabel>Current Dues</relationshipLabel>
        <relationshipName>Current_Dues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Receivable_Charges__c</fullName>
        <description>This is created as part of FS Development for Thailand Market</description>
        <label>Receivable Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Receivable_Rental_Overdue_Interest__c</fullName>
        <description>This is created as part of FS Development for Thailand Market</description>
        <label>Receivable Rental Overdue Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Receivable_Rentals__c</fullName>
        <description>This is created as part of FS Development for Thailand Market</description>
        <label>Receivable Rentals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Current Due</label>
    <nameField>
        <displayFormat>CD-{000000}</displayFormat>
        <label>Current Due Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Current Dues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>